--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,6 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver # Or the appropriate MySQL driver class
 
 
+application:
+  aggregator:
+    enabled: true
