--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,11 +12,19 @@ spring:
     jdbcUrl: jdbc:mysql://localhost:3306/aggregator_chapo
     username: root
     password: mdymen_pass
-    driverClassName: com.mysql.cj.jdbc.Driver # Or the appropriate MySQL driver class
+    driverClassName: com.mysql.cj.jdbc.Driver # Or the appropriate MySQL driver classa
+    hikari: # HikariCP specific properties
+      maximum-pool-size: 20 # Maximum number of connections in the pool
+      minimum-idle: 5     # Minimum number of idle connections
+      connection-timeout: 30000 # Maximum number of milliseconds that a client will wait for a connection from the pool. (default 30000ms)
+      idle-timeout: 600000 # Maximum idle time for connections (default 10 minutes)
+      max-lifetime: 1800000 # Maximum lifetime of a connection in the pool (default 30 minutes)
+      # pool-name: MyCustomHikariPool # Optional: name for the connection pool
+
 
 
 application:
   aggregator:
     enabled: true
-    group-size: 5
+    group-size: 10
     sleep: 20
